--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: mlugg/setup-zig@v1.2.1
         with:
           version: 0.14.0
-      - run: zig build test
+      - run: zig build test --summary all
       - run: zig build --summary all
