--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,4 +9,6 @@ jobs:
         with:
           version: 0.14.0
       - run: zig build test --summary all
-      - run: zig build --summary all
+      - run: zig build install --summary all
+      - run: find zig-out/ -type f -exec du -sh {} \;
+      
