--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,10 @@ name: CI
 on: [push, workflow_dispatch]
 jobs:
   CI:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - uses: mlugg/setup-zig@v1.2.1
@@ -10,4 +13,6 @@ jobs:
           version: 0.14.0
       - run: zig build test --summary all
       - run: zig build release --summary all
+        if: runner.os == 'Linux'
       - run: find zig-out/ -type f -exec du -sh {} \;
+        if: runner.os == 'Linux'
