--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
 FROM mcr.microsoft.com/devcontainers/base:ubuntu
 RUN apt-get update
-RUN apt-get install -y git kcov netcat tree
+RUN apt-get install -y git netcat tree
